Fixed last gaps in css

--- a/labs/assignment/application/assets/css/custom.css
+++ b/labs/assignment/application/assets/css/custom.css
@@ -63,6 +63,10 @@ h1, h2, h3, h4, h5, h6{
     border-radius: var(--rounding);
 }
 
+#settings-title, #description_home{
+    color: var(--text);
+}
+
 #main_text h2 {
     color: var(--text);
     font-size: 20px;
